<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_teal_700"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_large_24dp"
            android:paddingLeft="@dimen/padding_large_24dp"
            android:paddingRight="@dimen/padding_large_24dp"
            android:paddingTop="@dimen/padding_large_24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/permission_needed"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/md_white_1000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/permission_desc"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textColor="@color/md_white_1000" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/permission_item_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_grey_900"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/permission_exit_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_exit"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/md_white_1000" />

        <TextView
            android:id="@+id/permission_continue_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/padding_large_24dp"
            android:text="@string/action_continue"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>